PUZZLE QUESTION solved and added interface related concepts